add chapter 14 using the plot pngs for a website

--- a/012_/main.ipynb
+++ b/012_/main.ipynb
@@ -19,7 +19,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy import create_engine, Column, Integer, String, Enum\n",
+    "import psycopg2\n",
+    "\n",
+    "db_params = {\n",
+    "    \"dbname\": \"postgres\",\n",
+    "    \"user\": \"filipe\",\n",
+    "    \"password\": \"mysecretword123\",\n",
+    "    \"host\": \"localhost\",\n",
+    "    \"port\": \"5432\",\n",
+    "}\n",
+    "\n",
+    "new_db_name = \"nobel_winners_chapter_nine\"\n",
+    "\n",
+    "\n",
+    "# def create_database(dbname):\n",
+    "#     try:\n",
+    "#         conn = psycopg2.connect(\n",
+    "#             dbname=db_params[\"dbname\"],\n",
+    "#             user=db_params[\"user\"],\n",
+    "#             password=db_params[\"password\"],\n",
+    "#             host=db_params[\"host\"],\n",
+    "#         )\n",
+    "#         conn.autocommit = True\n",
+    "#         cursor = conn.cursor()\n",
+    "#         cursor.execute(f\"CREATE DATABASE {dbname}\")\n",
+    "#         cursor.close()\n",
+    "#         conn.close()\n",
+    "#         print(f\"Database {new_db_name} created successfully.\")\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"Failed to create database: {e}\")\n",
+    "\n",
+    "\n",
+    "# create_database(new_db_name)\n",
+    "\n",
+    "engine = create_engine(\n",
+    "    f'postgresql+psycopg2://{db_params[\"user\"]}:{db_params[\"password\"]}@{db_params[\"host\"]}:{db_params[\"port\"]}/{new_db_name}'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
