add chart using d3

--- a/014_/main.ipynb
+++ b/014_/main.ipynb
@@ -14825,6 +14825,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_json('data/nobel_winners.json',orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
